--- a/HDT5.ipynb
+++ b/HDT5.ipynb
@@ -2,31 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ed5591e6",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.metrics import accuracy_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0c0da076",
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precisión del modelo: 20.69%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Crear un DataFrame con los datos proporcionados\n",
+    "data = pd.read_csv(\"student.csv\")\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Codificar variables categóricas\n",
+    "label_encoders = {}\n",
+    "categorical_columns = ['Sex', 'High_School_Type', 'Scholarship', 'Additional_Work', 'Sports_activity', 'Transportation', 'Attendance', 'Reading', 'Notes', 'Listening_in_Class', 'Project_work', 'Grade']\n",
+    "\n",
+    "for column in categorical_columns:\n",
+    "\tlabel_encoders[column] = LabelEncoder()\n",
+    "\tdf[column] = label_encoders[column].fit_transform(df[column])\n",
+    "\n",
+    "# Definir variables predictoras (X) y variable objetivo (y)\n",
+    "X = df.drop(['Index', 'Id', 'Grade'], axis=1)\n",
+    "y = df['Grade']\n",
+    "\n",
+    "# Dividir el conjunto de datos en entrenamiento y prueba\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Inicializar y entrenar el modelo Naive Bayes\n",
+    "model = GaussianNB()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Realizar predicciones en el conjunto de prueba\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Calcular la precisión del modelo\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Precisión del modelo: {accuracy*100:_.2f}%\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -40,9 +76,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
