--- a/HDT5.ipynb
+++ b/HDT5.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,11 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"student.csv\")\n",
+    "data = pd.read_csv(\"student.csv\",  index_col=0)\n",
     "\n",
     "df = pd.DataFrame(data)\n"
    ]
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Index</th>\n",
        "      <th>Id</th>\n",
        "      <th>Student_Age</th>\n",
        "      <th>Sex</th>\n",
@@ -83,11 +82,28 @@
        "      <th>Project_work</th>\n",
        "      <th>Grade</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>5001</td>\n",
        "      <td>21</td>\n",
        "      <td>Male</td>\n",
@@ -106,7 +122,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>5002</td>\n",
        "      <td>20</td>\n",
        "      <td>Male</td>\n",
@@ -125,7 +140,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>5003</td>\n",
        "      <td>21</td>\n",
        "      <td>Male</td>\n",
@@ -144,7 +158,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>5004</td>\n",
        "      <td>18</td>\n",
        "      <td>Female</td>\n",
@@ -163,7 +176,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>5005</td>\n",
        "      <td>22</td>\n",
        "      <td>Male</td>\n",
@@ -185,29 +197,32 @@
        "</div>"
       ],
       "text/plain": [
-       "   Index    Id  Student_Age     Sex High_School_Type Scholarship  \\\n",
-       "0      0  5001           21    Male            Other         50%   \n",
-       "1      1  5002           20    Male            Other         50%   \n",
-       "2      2  5003           21    Male            State         50%   \n",
-       "3      3  5004           18  Female          Private         50%   \n",
-       "4      4  5005           22    Male          Private         50%   \n",
+       "         Id  Student_Age     Sex High_School_Type Scholarship Additional_Work  \\\n",
+       "Index                                                                           \n",
+       "0      5001           21    Male            Other         50%             Yes   \n",
+       "1      5002           20    Male            Other         50%             Yes   \n",
+       "2      5003           21    Male            State         50%              No   \n",
+       "3      5004           18  Female          Private         50%             Yes   \n",
+       "4      5005           22    Male          Private         50%              No   \n",
        "\n",
-       "  Additional_Work Sports_activity Transportation  Weekly_Study_Hours  \\\n",
-       "0             Yes              No        Private                   0   \n",
-       "1             Yes              No        Private                   0   \n",
-       "2              No              No        Private                   2   \n",
-       "3             Yes              No            Bus                   2   \n",
-       "4              No              No            Bus                  12   \n",
+       "      Sports_activity Transportation  Weekly_Study_Hours Attendance Reading  \\\n",
+       "Index                                                                         \n",
+       "0                  No        Private                   0     Always     Yes   \n",
+       "1                  No        Private                   0     Always     Yes   \n",
+       "2                  No        Private                   2      Never      No   \n",
+       "3                  No            Bus                   2     Always      No   \n",
+       "4                  No            Bus                  12     Always     Yes   \n",
        "\n",
-       "  Attendance Reading Notes Listening_in_Class Project_work Grade  \n",
-       "0     Always     Yes   Yes                 No           No    AA  \n",
-       "1     Always     Yes    No                Yes          Yes    AA  \n",
-       "2      Never      No    No                 No          Yes    AA  \n",
-       "3     Always      No   Yes                 No           No    AA  \n",
-       "4     Always     Yes    No                Yes          Yes    AA  "
+       "      Notes Listening_in_Class Project_work Grade  \n",
+       "Index                                              \n",
+       "0       Yes                 No           No    AA  \n",
+       "1        No                Yes          Yes    AA  \n",
+       "2        No                 No          Yes    AA  \n",
+       "3       Yes                 No           No    AA  \n",
+       "4        No                Yes          Yes    AA  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +475,7 @@
        "4    AA  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +510,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +843,7 @@
        "4      4  5005           22                  12"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +872,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
