Variables categoricas a numericas, casteo a float, se quita index

--- a/HDT5.ipynb
+++ b/HDT5.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +25,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"student.csv\")\n",
+    "data = pd.read_csv(\"student.csv\", index_col=0)\n",
     "\n",
     "df = pd.DataFrame(data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Index      Id  Student_Age  Sex  High_School_Type  Scholarship  \\\n",
+      "0    0.0  5001.0         21.0  0.0               2.0         50.0   \n",
+      "1    1.0  5002.0         20.0  0.0               2.0         50.0   \n",
+      "2    2.0  5003.0         21.0  0.0               1.0         50.0   \n",
+      "3    3.0  5004.0         18.0  1.0               0.0         50.0   \n",
+      "4    4.0  5005.0         22.0  0.0               0.0         50.0   \n",
+      "\n",
+      "   Additional_Work  Sports_activity  Transportation  Weekly_Study_Hours  \\\n",
+      "0              1.0              0.0             0.0                 0.0   \n",
+      "1              1.0              0.0             0.0                 0.0   \n",
+      "2              0.0              0.0             0.0                 2.0   \n",
+      "3              1.0              0.0             1.0                 2.0   \n",
+      "4              0.0              0.0             1.0                12.0   \n",
+      "\n",
+      "   Attendance  Reading  Notes  Listening_in_Class  Project_work  Grade  \n",
+      "0         2.0      1.0    1.0                 0.0           0.0    7.0  \n",
+      "1         2.0      1.0    0.0                 1.0           1.0    7.0  \n",
+      "2         0.0      0.0    0.0                 0.0           1.0    7.0  \n",
+      "3         2.0      0.0    1.0                 0.0           0.0    7.0  \n",
+      "4         2.0      1.0    0.0                 1.0           1.0    7.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df['Scholarship'] = df['Scholarship'].replace('None', 0)\n",
+    "df['Scholarship'] = df['Scholarship'].str.rstrip('%')\n",
+    "# Definir diccionarios de mapeo para codificación ordinal\n",
+    "\n",
+    "sex_mapping = {'Male': 0, 'Female': 1}\n",
+    "high_school_mapping = {'Private': 0, 'State': 1, 'Other': 2}\n",
+    "additional_work_mapping = {'No': 0, 'Yes': 1}\n",
+    "sports_activity_mapping = {'No': 0, 'Yes': 1}\n",
+    "attendance_mapping = {'Always': 2, 'Sometimes': 1, 'Never': 0}\n",
+    "reading_mapping = {'No': 0, 'Yes': 1}\n",
+    "notes_mapping = {'No': 0, 'Yes': 1}\n",
+    "listening_mapping = {'No': 0, 'Yes': 1}\n",
+    "project_work_mapping = {'No': 0, 'Yes': 1}\n",
+    "transportation_mapping = {'Private': 0, 'Bus': 1}   \n",
+    "grade_mapping = {\n",
+    "    'AA': 7,\n",
+    "    'BA': 6,\n",
+    "    'BB': 5,\n",
+    "    'CB': 4,\n",
+    "    'CC': 3,\n",
+    "    'DC': 2,\n",
+    "    'DD': 1,\n",
+    "    'Fail': 0\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Aplicar codificación ordinal a las variables categóricas\n",
+    "df['Sex'] = df['Sex'].map(sex_mapping)\n",
+    "df['High_School_Type'] = df['High_School_Type'].map(high_school_mapping)\n",
+    "df['Additional_Work'] = df['Additional_Work'].map(additional_work_mapping)\n",
+    "df['Sports_activity'] = df['Sports_activity'].map(sports_activity_mapping)\n",
+    "df['Attendance'] = df['Attendance'].map(attendance_mapping)\n",
+    "df['Reading'] = df['Reading'].map(reading_mapping)\n",
+    "df['Notes'] = df['Notes'].map(notes_mapping)\n",
+    "df['Listening_in_Class'] = df['Listening_in_Class'].map(listening_mapping)\n",
+    "df['Project_work'] = df['Project_work'].map(project_work_mapping)\n",
+    "df['Transportation'] = df['Transportation'].map(transportation_mapping)\n",
+    "df['Grade'] = df['Grade'].map(grade_mapping)\n",
+    "\n",
+    "# Convertir todas las columnas a tipo float\n",
+    "df = df.astype(float)\n",
+    "\n",
+    "# Verificar el DataFrame con las variables categóricas codificadas como floats\n",
+    "print(df.head())\n"
    ]
   },
   {
@@ -43,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -88,127 +168,127 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>5001</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>50%</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Always</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>AA</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5001.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5002</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>50%</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Always</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>AA</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5002.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>5003</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>State</td>\n",
-       "      <td>50%</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Never</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>AA</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5003.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>5004</td>\n",
-       "      <td>18</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>50%</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Bus</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Always</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>AA</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5004.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>5005</td>\n",
-       "      <td>22</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>50%</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Bus</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Always</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>AA</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5005.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Index    Id  Student_Age     Sex High_School_Type Scholarship  \\\n",
-       "0      0  5001           21    Male            Other         50%   \n",
-       "1      1  5002           20    Male            Other         50%   \n",
-       "2      2  5003           21    Male            State         50%   \n",
-       "3      3  5004           18  Female          Private         50%   \n",
-       "4      4  5005           22    Male          Private         50%   \n",
+       "   Index      Id  Student_Age  Sex  High_School_Type  Scholarship  \\\n",
+       "0    0.0  5001.0         21.0  0.0               2.0         50.0   \n",
+       "1    1.0  5002.0         20.0  0.0               2.0         50.0   \n",
+       "2    2.0  5003.0         21.0  0.0               1.0         50.0   \n",
+       "3    3.0  5004.0         18.0  1.0               0.0         50.0   \n",
+       "4    4.0  5005.0         22.0  0.0               0.0         50.0   \n",
        "\n",
-       "  Additional_Work Sports_activity Transportation  Weekly_Study_Hours  \\\n",
-       "0             Yes              No        Private                   0   \n",
-       "1             Yes              No        Private                   0   \n",
-       "2              No              No        Private                   2   \n",
-       "3             Yes              No            Bus                   2   \n",
-       "4              No              No            Bus                  12   \n",
+       "   Additional_Work  Sports_activity  Transportation  Weekly_Study_Hours  \\\n",
+       "0              1.0              0.0             0.0                 0.0   \n",
+       "1              1.0              0.0             0.0                 0.0   \n",
+       "2              0.0              0.0             0.0                 2.0   \n",
+       "3              1.0              0.0             1.0                 2.0   \n",
+       "4              0.0              0.0             1.0                12.0   \n",
        "\n",
-       "  Attendance Reading Notes Listening_in_Class Project_work Grade  \n",
-       "0     Always     Yes   Yes                 No           No    AA  \n",
-       "1     Always     Yes    No                Yes          Yes    AA  \n",
-       "2      Never      No    No                 No          Yes    AA  \n",
-       "3     Always      No   Yes                 No           No    AA  \n",
-       "4     Always     Yes    No                Yes          Yes    AA  "
+       "   Attendance  Reading  Notes  Listening_in_Class  Project_work  Grade  \n",
+       "0         2.0      1.0    1.0                 0.0           0.0    7.0  \n",
+       "1         2.0      1.0    0.0                 1.0           1.0    7.0  \n",
+       "2         0.0      0.0    0.0                 0.0           1.0    7.0  \n",
+       "3         2.0      0.0    1.0                 0.0           0.0    7.0  \n",
+       "4         2.0      1.0    0.0                 1.0           1.0    7.0  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
